# backend

./: .dockerignore  .env.backend.example  .env.example  .env.worker.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
.github/ecs/: backend-task-definition.json  worker-task-definition.json
.github/workflows/: deploy-backend.yml
app/: config.py  main.py
app/api/: pagination.py
app/api/v1/: analytics.py  jobs.py  (+4 more)
app/auth/: __init__.py  dependencies.py  jwt_verifier.py
app/db/: mongodb.py
app/models/: __init__.py  application.py  base.py  job.py  job_chunk.py  profile.py  resume.py  resume_chunk.py
app/services/: analytics_service.py  embedding_queue_service.py  embedding_service.py  job_chunk_service.py  job_page_validation_service.py  llm_service.py  match_score_service.py  resume_chunk_service.py  resume_parser.py  s3_service.py  tailoring_service.py  vector_cleanup_queue_service.py  vector_store_service.py
app/worker/: __init__.py  celery_app.py  embedding_tasks.py
scripts/: backfill_job_embeddings.py  backfill_pinecone_vectors.py  diagnose_list_performance.py  job_chunks_vector_index.json  resume_chunks_vector_index.json  run-pytest.mjs  sync_indexes.py
tests/: test_applications_api.py  test_embedding_queue_service.py  test_embedding_service.py  test_job_chunk_service.py  test_job_page_validation_service.py  test_jobs_api.py  test_match_score_service.py  test_pagination.py  test_resume_chunk_service.py  test_resume_upload_embeddings.py  test_vector_cleanup_queue_service.py  test_vector_store_service.py
